# local-llm

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: defaults.yaml
scripts/: build_history.sh
src/localllm/: __init__.py  chain.py  cli.py  config.py  ingestion.py  vectorstore.py
src/localllm/api/: main.py
src/localllm/ui/: app.py
tests/: test_api_health.py  test_ingestion.py
